[package]
name = "spawn-ptrace"
version = "0.1.2-pre"
authors = ["Ted Mielczarek <ted@mielczarek.org>"]
license = "MIT"
description = "Spawn a process with ptrace enabled."
homepage = "https://github.com/luser/spawn-ptrace"
repository = "https://github.com/luser/spawn-ptrace"

[dependencies]
nix = "0.7.0"
