[package]
name = "spawn-ptrace"
version = "0.1.2"
authors = ["Ted Mielczarek <ted@mielczarek.org>"]
license = "MIT"
description = "Spawn a process with ptrace enabled."
homepage = "https://github.com/luser/spawn-ptrace"
repository = "https://github.com/luser/spawn-ptrace"
edition = "2018"

[dependencies]
nix = "0.18"

[dev-dependencies]
doc-comment = "0.3.3"

